remove execUtilClone and use new common lib
Signed-off-by: Luca Stocchi <lstocchi@redhat.com>